--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
-    "react-lazy-blur-image": "^0.1.2",
-    "tailwind-children": "^0.2.2"
+    "react-lazy-blur-image": "^0.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
