--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.11.1",
+    "dom-parser": "^0.1.6",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,7 +22,7 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.7",
-    "prisma": "^3.11.1",
+    "prisma": "^3.12.0",
     "tailwindcss": "^3.0.23"
   }
 }
