--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.33.1",
-    "react-lazy-blur-image": "^0.1.2"
+    "react-lazy-blur-image": "^0.1.2",
+    "react-lazy-load-image-component": "^1.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
